--- a/style.css
+++ b/style.css
@@ -1,265 +1,363 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family:'Roboto', sans-serif ;
-
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
 }
 
 body {
-    background-color: #000015;
-    /* background: #252440; */
-    /* background-color: #131c46; */
-    color: #fff;
-    padding: 0 5rem ;
+  background-color: #000015;
+  /* background: #252440; */
+  /* background-color: #131c46; */
+  color: #fff;
+  padding: 0 5rem;
 }
 .navbar {
-    position: relative;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 70px;
-    width: 100%;
-    z-index: 100;
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 70px;
+  width: 100%;
+  z-index: 100;
 }
 .navbar .navbar-title {
-    font-size: 2rem;
-    cursor: default;
+  font-size: 2rem;
+  cursor: default;
 }
 .navbar .menu-active {
-    display: none;
-    width: 40px;
-    height: 40px;
+  display: none;
+  width: 40px;
+  height: 40px;
 }
 .navbar .navbar-navigation {
-    display: flex;
-    align-items: center;
-    gap: 1.5rem;
+  display: flex;
+  align-items: center;
+  gap: 1.5rem;
 }
 .navbar .navbar-navigation .navigation-link {
-    text-decoration: none;
-    color: #9c9b9b;
-    font-weight: 600;
+  text-decoration: none;
+  color: #9c9b9b;
+  font-weight: 600;
 }
-.navbar .navbar-navigation .navigation-link:hover,.navbar .navbar-navigation .active  {
-   color: #00e0fea7;
+.navbar .navbar-navigation .navigation-link:hover,
+.navbar .navbar-navigation .active {
+  color: #00e0fea7;
 }
 .home {
-    height: 100vh;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 70px 0;
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 70px 0;
 }
 .home .container-content {
-    max-width: 500px;
+  max-width: 500px;
 }
 .home .container-content h1 {
-    font-size: 4rem;
-    font-weight: 600;
-    line-height: 1.2;
+  font-size: 4rem;
+  font-weight: 600;
+  line-height: 1.2;
 }
 .home .container-content h3 {
-    font-size: 2rem;
-    font-weight: 700;
+  font-size: 2rem;
+  font-weight: 700;
 }
 .home .container-content p {
-    font-size: 1.3rem;
-    margin: 20px 0 40px;
+  font-size: 1.3rem;
+  margin: 20px 0 40px;
 }
 .home .container-content .buttom {
-    position: relative;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    width: 180px;
-    height: 3.3rem;
-    font-size: 1.4rem;
-    color: #fff;
-    text-decoration: none;
-    background: linear-gradient(to right, #000015,#0ed);
-    border-radius: 40px;
-    font-weight: 600;z-index: 1;
-
+  position: relative;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 180px;
+  height: 3.3rem;
+  font-size: 1.4rem;
+  color: #fff;
+  text-decoration: none;
+  background: linear-gradient(to right, #000015, #0ed);
+  border-radius: 40px;
+  font-weight: 600;
+  z-index: 1;
 }
 .buttom::before {
-    content: "";
-    position: absolute;
-    inset: 0;
-    top: 0;
-    left: 0;
-    background: linear-gradient(to right, #000015,#0ed);
-    background-position: 0 0;
-    z-index: -1;
-    border-radius: 40px;
-    background-size: 200%;
-    filter: blur(15px);
-    transition: .5s ease;
+  content: "";
+  position: absolute;
+  inset: 0;
+  top: 0;
+  left: 0;
+  background: linear-gradient(to right, #000015, #0ed);
+  background-position: 0 0;
+  z-index: -1;
+  border-radius: 40px;
+  background-size: 200%;
+  filter: blur(15px);
+  transition: 0.5s ease;
 }
-.buttom:hover:before{
-    background-position: 100% 0;
-    
+.buttom:hover:before {
+  background-position: 100% 0;
 }
 .buttom::after {
-    content: "";
-    position: absolute;
-    inset: 0;
-    top: 0;
-    left: 0;
-    background: linear-gradient(to right, #000015,#0ed);
-    background-position: 0 0;
-    z-index: -1;
-    border-radius: 40px;
-    background-size: 200%;
-    transition: .5s ease;
+  content: "";
+  position: absolute;
+  inset: 0;
+  top: 0;
+  left: 0;
+  background: linear-gradient(to right, #000015, #0ed);
+  background-position: 0 0;
+  z-index: -1;
+  border-radius: 40px;
+  background-size: 200%;
+  transition: 0.5s ease;
 }
 .buttom:hover::after {
-    background-position: 100% 0;
+  background-position: 100% 0;
 }
 
 .home .container-icon a {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 50px;
-    background: linear-gradient(to right, #000015,#0ed);
-    border-radius: 50%;
-    font-size: 2rem;
-    color: #fff;
-    text-decoration: none;
-    margin: 2rem 0 ;
-    z-index: 1;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  background: linear-gradient(to right, #000015, #0ed);
+  border-radius: 50%;
+  font-size: 2rem;
+  color: #fff;
+  text-decoration: none;
+  margin: 2rem 0;
+  z-index: 1;
 }
 .home .container-icon a::before {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(to right, #000015,#0ed);
-    border-radius: 50%;
-    z-index: -1;
-    transition: .5s ease;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to right, #000015, #0ed);
+  border-radius: 50%;
+  z-index: -1;
+  transition: 0.5s ease;
 }
 .home.container-icon a:hover::before {
-    filter: blur(15px);
+  filter: blur(15px);
 }
 .home .container-icon a::after {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: #000015;
-    border-radius: 50%;
-    transform: scale(.88);
-    z-index: -1;
-    transition: .5s ease;
-
-
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #000015;
+  border-radius: 50%;
+  transform: scale(0.88);
+  z-index: -1;
+  transition: 0.5s ease;
 }
 .home .container-icon a:hover::after {
-    transform: scale(0);
+  transform: scale(0);
 }
-
 
 .home .container-img {
-    width: 410px;
-    height: 410px;
-   left: -30;
+  width: 410px;
+  height: 410px;
+  left: -30;
 }
 .home .container-img .circle {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-    background-color: #0ed;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: #0ed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.home .container-img .circle::after{
-    content: "";
-    position: absolute;
-    width: 380px;
-    height: 380px;
-    background: #000015;
-    border-radius: 50%;
-
+.home .container-img .circle::after {
+  content: "";
+  position: absolute;
+  width: 380px;
+  height: 380px;
+  background: #000015;
+  border-radius: 50%;
 }
 .circle span {
-    position: absolute;
-    width: 90%;
-    height: 100%;
-    background: linear-gradient(to right, #000015,#0ed);
-    border-radius: 50%;
-    animation: rotation 5s linear infinite;
-    
-
+  position: absolute;
+  width: 90%;
+  height: 100%;
+  background: linear-gradient(to right, #000015, #0ed);
+  border-radius: 50%;
+  animation: rotation 5s linear infinite;
 }
 .circle span:nth-child(1) {
-    filter: blur(15px);
+  filter: blur(15px);
 }
 .container-img .image {
-    position: relative;
-    width: 380px;
-    height: 380px;
-    border-radius: 50%;
-    z-index: 1;
-    overflow: hidden;
-
+  position: relative;
+  width: 380px;
+  height: 380px;
+  border-radius: 50%;
+  z-index: 1;
+  overflow: hidden;
 }
 
 .image img {
-    position: absolute;
-    top: 30px;
-    left: 50%;
-    transform: translateX(-50%);
-    max-width: 350px;
-    object-fit: cover;
+  position: absolute;
+  top: 30px;
+  left: 50%;
+  transform: translateX(-50%);
+  max-width: 350px;
+  object-fit: cover;
 }
 /* .home .container-img .circle:hover:after
 .home .container-img .circle::before
 .home .container-img .circle:hover::before */
-
-
-
-
-
-
-@media (max-width:850px) {
-    .navbar .menu-active {
-        display: block;
+@media (max-width:1142px) {
+    .home {
+        flex-wrap: wrap;
+        gap: 60px;
     }
-    .navbar .navbar-navigation {
-        position: absolute;
+    .home .container-content h1 {
+        font-size: 3rem;
+    }
+    .home .container-content h3 {
+        font-size: 1.7rem;
+    }
+    .home .container-content p {
+        font-size: 1rem;
+    }
+
+    .home .container-img {
+    width: 360px;
+    height: 360px;
+    }
+    .home .container-img .circle::after {
+        width: 330px;
+        height: 330px;
+    }
+    .container-img .image {
+        width: 330px;
+        height: 330px;
+    }
+    .image img {
+        width: 300px;
+    }
+    
+}
+@media (max-width: 850px) {
+  .navbar .menu-active {
+    display: block;
+  }
+  .navbar .navbar-navigation {
+    position: absolute;
+    flex-direction: column;
+    top: 80px;
+    right: -40px;
+    background-color: #0000004a;
+    width: 200px;
+    padding: 2em;
+    align-items: end;
+  }
+  .navbar .response-active {
+    display: none;
+  }
+  .home .container-content {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+
+  }
+  
+}
+@media (max-width:638px) {
+    .home .container-img {
+        width: 280px;
+        height: 280px;
+        }
+        .home .container-img .circle::after {
+            width: 260px;
+            height: 260px;
+        }
+        .container-img .image {
+            width: 260px;
+            height: 260px;
+        }
+        .image img {
+            width: 250px;
+        }
+}
+@media (max-width: 470px) {
+  body {
+    padding: 0 2rem ;
+  }
+  .navbar .navbar-title {
+    font-size: 1.3rem;
+  }
+  .home .container-img {
+    width: 200px;
+    height: 200px;
+    }
+    .home .container-img .circle::after {
+        width: 180px;
+        height: 180px;
+    }
+    .container-img .image {
+        width: 180px;
+        height: 180px;
+    }
+    .image img {
+        width: 180px;
+    }
+    .home .container-content {
+        display: flex;
         flex-direction: column;
-        top: 80px;
-        right: -40px;
-        background-color: #0000004a;
-        width: 200px;
-        padding: 2em;
-        align-items: end;
+        justify-content: center;
+        align-items: center;
     }
-    .navbar .response-active {
-        display: none;
+    .home .container-content h1 {
+        font-size: 2rem;
     }
-}
-@media (max-width:470px) {
-    body {
-        padding: 0 2rem ;
+    .home .container-content h3 {
+        font-size: 1.2rem;
     }
-    .navbar .navbar-title {
-        font-size: 1.3rem;
+    .home .container-content p {
+        font-size: 0.8rem;
+        text-align: justify;
     }
 }
-
-
+@media (max-width: 375px) {
+    .home .container-img {
+        width: 140px;
+        height: 140px;
+        }
+        .home .container-img .circle::after {
+            width: 130px;
+            height: 130px;
+        }
+        .container-img .image {
+            width: 130px;
+            height: 130px;
+        }
+        .image img {
+            width: 120px;
+            top: 10px;
+        }
+        .home .container-content h1 {
+            font-size: 2rem;
+        }
+        .home .container-content h3 {
+            font-size: 1.2rem;
+        }
+        .home .container-content p {
+            font-size: 0.8rem;
+        }
+}
 @keyframes rotation {
-    0% {
-        transform: rotate(0);
-    }
-    100% {
-        transform: rotate(360deg);
-    }
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
