resolvido bug da pagina de contatos

--- a/pages/contact/contact.css
+++ b/pages/contact/contact.css
@@ -195,6 +195,9 @@
     .navbar {
       padding: 0 2rem;
     }
+    .navbar .navbar-navigation {
+      right: 0;
+    }
     .container-form form h2 {
       font-size: 1.5rem;
     }
