--- a/pages/project/project.css
+++ b/pages/project/project.css
@@ -75,6 +75,7 @@
     box-shadow: inset 0px 0px 75px #000000;
     display: flex;
     gap: 2rem;
+    justify-content: center;
   }
   .container-projects .type-project div button {
     background-color: transparent;
@@ -217,6 +218,9 @@
       font-size: 1.1rem;
       padding: .5rem 2rem;
     }
+    /* .container-projects .type-project div {
+      width: auto;
+    } */
   }
   @media (max-width: 365px) {
     .navbar {
@@ -230,5 +234,8 @@
     }
     .procjects .project .description-project .btn-project {
       gap: 1rem;
+    }
+    .procjects .project .description-project p {
+      text-align: left;
     }
   }
